--- a/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_l_english.yml
@@ -22,7 +22,7 @@
  climate_tropical: "Tropical"
  climate_desert: "Desert"
  climate_arid: "Arid"
- climate_savannah: "Savannah"
+ climate_savannah: "Savanna"
  climate_arctic: "Arctic"
  climate_alpine: "Alpine"
  climate_tundra: "Tundra"
