--- a/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_classes_l_english.yml
@@ -250,54 +250,54 @@
  trait_pc_pd_striped_preference: "Arid Preference"
  trait_pc_pd_striped_preference_desc: "$trait_pc_arctic_preference_desc$"02asp[en]
 
-#Savannah
+#Savanna
  pc_pd_steppe: "Steppe World"
  pc_pd_steppe_desc: "Dry, rocky world with a nitrogen-oxygen atmosphere. This semi-arid grassland has rolling hills and plains covering much of the surface. While almost no trees grow, rainfall can support shrubs and grasses."
  pc_pd_steppe_adj: "grasslanded"
- mod_pc_pd_steppe_habitability: "Savannah Habitability"
- trait_pc_pd_steppe_preference: "Savannah Preference"
+ mod_pc_pd_steppe_habitability: "Savanna Habitability"
+ trait_pc_pd_steppe_preference: "Savanna Preference"
  trait_pc_pd_steppe_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_prairie: "Prairie World"
  pc_pd_prairie_desc: "Rocky world with a nitrogen-oxygen atmosphere. Seasonal hydrosphere with a single great landmass, large inland seas, short dry summers, and cold, harsh winters."
  pc_pd_prairie_adj: "prairied"
- mod_pc_pd_prairie_habitability: "Savannah Habitability"
- trait_pc_pd_prairie_preference: "Savannah Preference"
+ mod_pc_pd_prairie_habitability: "Savanna Habitability"
+ trait_pc_pd_prairie_preference: "Savanna Preference"
  trait_pc_pd_prairie_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_veld: "Veld World"
  pc_pd_veld_desc: "Dry, rocky world with a nitrogen-oxygen atmosphere this subtropical landscape is covered in scrub woodland and open savannahs in a dry, rocky world with a nitrogen-oxygen atmosphere. This world has mild winters and long hot summers."
  pc_pd_veld_adj: "veldy"
- mod_pc_pd_veld_habitability: "Savannah Habitability"
- trait_pc_pd_veld_preference: "Savannah Preference"
+ mod_pc_pd_veld_habitability: "Savanna Habitability"
+ trait_pc_pd_veld_preference: "Savanna Preference"
  trait_pc_pd_veld_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_semi_arid: "Semi-Arid World"
  pc_pd_semi_arid_desc: "Rocky world covered in scablands and rocky valleys with a nitrogen-oxygen atmosphere, and the hydrosphere allows for a short but significant wet season. Still, aside from a few ubiquitous types of grass, vegetation is primarily concentrated around protected valleys and near large bodies of water."
  pc_pd_semi_arid_adj: "arid"
- mod_pc_pd_semi_arid_habitability: "Savannah Habitability"
- trait_pc_pd_semi_arid_preference: "Savannah Preference"
+ mod_pc_pd_semi_arid_habitability: "Savanna Habitability"
+ trait_pc_pd_semi_arid_preference: "Savanna Preference"
  trait_pc_pd_semi_arid_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_aspen: "Aspen World"
  pc_pd_aspen_desc: "Dry, rocky world with a nitrogen-oxygen atmosphere consists of groves of trees interspersed with grasslands. A small but stable hydrosphere of streams and river valleys support the forests and dense shrubbery."
  pc_pd_aspen_adj: "wooded"
- mod_pc_pd_aspen_habitability: "Savannah Habitability"
- trait_pc_pd_aspen_preference: "Savannah Preference"
+ mod_pc_pd_aspen_habitability: "Savanna Habitability"
+ trait_pc_pd_aspen_preference: "Savanna Preference"
  trait_pc_pd_aspen_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_sandstone: "Sandstone World"
  pc_pd_sandstone_desc: "A dry and rocky world that possesses a nitrogen-oxygen atmosphere featuring vast grasslands and sandstone formations sculpted by the relentless winds. Its hydrosphere supports the resilient grasses that have adapted to thrive in this environment."
  pc_pd_sandstone_adj: "windy"
- mod_pc_pd_sandstone_habitability: "Savannah Habitability"
- trait_pc_pd_sandstone_preference: "Savannah Preference"
+ mod_pc_pd_sandstone_habitability: "Savanna Habitability"
+ trait_pc_pd_sandstone_preference: "Savanna Preference"
  trait_pc_pd_sandstone_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_supercontinent: "Supercontinent World"
  pc_pd_supercontinent_desc: "Rocky world of grasslands and deserts with a nitrogen-oxygen atmosphere, this planet's plate tectonics is currently in the state of a supercontinent. Immediate coastal areas are lush, but much of the inland terrain is grasslands which slowly turn into large arid deserts."
  pc_pd_supercontinent_adj: "supercontinental"
- mod_pc_pd_supercontinent_habitability: "Savannah Habitability"
- trait_pc_pd_supercontinent_preference: "Savannah Preference"
+ mod_pc_pd_supercontinent_habitability: "Savanna Habitability"
+ trait_pc_pd_supercontinent_preference: "Savanna Preference"
  trait_pc_pd_supercontinent_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_sinkhole: "Sinkhole World"
  pc_pd_sinkhole_desc: "Rocky world dominated by dry, arid plains covered by a nitrogen-oxygen atmosphere. While the surface has a small and stable hydrosphere, a planet-spanning subterranean ocean hides underneath, creating giant sinkholes that dot the surface of this world."
  pc_pd_sinkhole_adj: "holey"
- mod_pc_pd_sinkhole_habitability: "Savannah Habitability"
- trait_pc_pd_sinkhole_preference: "Savannah Preference"
+ mod_pc_pd_sinkhole_habitability: "Savanna Habitability"
+ trait_pc_pd_sinkhole_preference: "Savanna Preference"
  trait_pc_pd_sinkhole_preference_desc: "$trait_pc_arctic_preference_desc$"
 
 ###Arctic
