--- a/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
@@ -101,8 +101,8 @@
  pd_primal: "Primal World"
  pd_primal_desc: "As volcanic activity subsides on this young planet, intricate flora and fauna emerge, contributing to the development of a breathable atmosphere and a stabilized hydrosphere."
 
- #Savannah
- pd_savannah: "Savannah World"
+ #Savanna
+ pd_savannah: "Savanna World"
  pd_savannah_desc: " The limited hydrosphere results in brief wet seasons. Vegetation, primarily consisting of ubiquitous grasses, is concentrated around shallow oases."
  pd_steppe: "Steppe World"
  pd_steppe_desc: "This semi-arid grassland features expansive rolling hills and plains. The absence of trees is notable, but intermittent rainfall sustains the growth of shrubs and grasses."
