--- a/planetary_diversity/localisation/polish/planetarydiversity_engine_events_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_engine_events_l_polish.yml
@@ -1,8 +1,8 @@
 ﻿l_polish:
 
 ###Terraforming Event
- pdengine.21.name: "Terraforming Complete"
- pdengine.21.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this world."
+ pdengine.21.name: "Terraformowanie ukończone"
+ pdengine.21.desc: "Gdy zakończyliśmy terraformowanie §Y[From.GetName]§! dostaliśmy nową okazje by wybrać nowy biom dla tego świata."
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -86,15 +86,15 @@
  pdengine.21.lichen: "$pc_pd_lichen$"
 
 ###Gaia Terraforming Event
- pdengine.24.name: "Gaia Terraforming Complete"
- pdengine.24.desc: "As we finish terraforming §Y[Root.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.24.name: "Gajańskie terraformowanie ukończone"
+ pdengine.24.desc: "Gdy zakończyliśmy terraformowanie §Y[Root.GetName]§! dostaliśmy nową okazje by wybrać nowy biom dla tego świata."
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
 
 ###Life Seeded Choice Event
  pdengine.90.name: "$civic_life_seeded$ Biome"
- pdengine.90.desc: "Our people evolved on this paradise of a planet we call §Y[Capital_scope.GetName]§!. What biome is our homeworld?"
+ pdengine.90.desc: "Nasi ludzie ewoluowali na tej rajskiej planecie, którą nazywamy §Y[Capital_scope.GetName]§!. Jaki biom jest naszą ojczyzną?"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -103,14 +103,14 @@
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
 
 ###Uncommon Gaia Terraforming Event
- pdengine.96.name: "Gaia Terraforming Complete"
- pdengine.96.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this ideal world."
- pdengine.96.wet_gaia_cave: "Wet Climate"
- pdengine.96.dry_gaia_cave: "Dry Climate"
- pdengine.96.cold_gaia_cave: "Cold Climate"
- pdengine.96.wet_gaia_superhabitable: "Wet Climate"
- pdengine.96.dry_gaia_superhabitable: "Dry Climate"
- pdengine.96.cold_gaia_superhabitable: "Cold Climate"
- pdengine.96.wet_gaia_tidally_locked: "Wet Climate"
- pdengine.96.dry_gaia_tidally_locked: "Dry Climate"
- pdengine.96.cold_gaia_tidally_locked: "Cold Climate"
+ pdengine.96.name: "Gajańskie terraformowanie ukończone"
+ pdengine.96.desc: "Gdy zakończyliśmy terraformowanie §Y[From.GetName]§! dostaliśmy nową okazje by wybrać nowy biom dla tego świata."
+ pdengine.96.wet_gaia_cave: "Wilgotny"
+ pdengine.96.dry_gaia_cave: "Suchy"
+ pdengine.96.cold_gaia_cave: "Zimny"
+ pdengine.96.wet_gaia_superhabitable: "Wilgotny"
+ pdengine.96.dry_gaia_superhabitable: "Suchy"
+ pdengine.96.cold_gaia_superhabitable: "Zimny"
+ pdengine.96.wet_gaia_tidally_locked: "Wilgotny"
+ pdengine.96.dry_gaia_tidally_locked: "Suchy"
+ pdengine.96.cold_gaia_tidally_locked: "Zimny"
