--- a/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_l_polish.yml
@@ -1,31 +1,31 @@
 ﻿l_polish:
 
 ###Policy
- policy_pd_terraforming: "Terraforming"
- policy_pd_terraforming_desc: "We can decide how our scientists appoarch terraform our planets."
- pd_choose_every_planet_terraforming_name: "Choose Every Biome"
- pd_choose_every_planet: "Choose Every Biome"
- pd_choose_every_planet_desc: "We will be able to make a choice about biome selection at the end of each terraforming project."
- pd_same_as_homeworld_terraforming_name: "Homeworld Homogeneous"
- pd_same_as_homeworld: "Homeworld Homogeneous"
- pd_same_as_homeworld_desc: "Any apporiate planets will be terraformed to the same class, the rest will terraformed to random classes."
- pd_random_same_class_terraforming_name: "Random Similar Biome"
- pd_random_same_class: "Random Similar Biome"
- pd_random_same_class_desc: "We will randomly select any biome in the same planet group."
+ policy_pd_terraforming: "Terraformowanie"
+ policy_pd_terraforming_desc: "Możemy decydować, w jaki sposób nasi naukowcy podejdą do terraformowania naszych planet."
+ pd_choose_every_planet_terraforming_name: "Wybierz każdy biom"
+ pd_choose_every_planet: "Wybierz każdy biom"
+ pd_choose_every_planet_desc: "Na koniec każdego projektu terraformowania będziemy mogli dokonać wyboru odnośnie wyboru biomu."
+ pd_same_as_homeworld_terraforming_name: "Świat ojczysty jednorodny"
+ pd_same_as_homeworld: "Świat ojczysty jednorodny"
+ pd_same_as_homeworld_desc: "Wszystkie odpowiednie planety zostaną terraformowane do tej samej klasy, reszta zostanie terraformowana do klas losowych."
+ pd_random_same_class_terraforming_name: "Losowy podobny biom"
+ pd_random_same_class: "Losowy podobny biom"
+ pd_random_same_class_desc: "Losowo wybierzemy dowolny biom z tej samej grupy planet."
 
- climate_superhabitables: "Superhabitable"
- climate_cavern: "Cavern"
- climate_tidallyocked: "Tidally Locked"
+ climate_superhabitables: "Super Ziemski"
+ climate_cavern: "Jaskiniowy"
+ climate_tidallyocked: "Synchroniczny"
 
- climate_continental: "Continental"
- climate_ocean: "Ocean"
- climate_tropical: "Tropical"
- climate_desert: "Desert"
- climate_arid: "Arid"
- climate_savannah: "Savannah"
- climate_arctic: "Arctic"
- climate_alpine: "Alpine"
- climate_tundra: "Tundra"
+ climate_continental: "Kontynentalny"
+ climate_ocean: "Oceaniczny"
+ climate_tropical: "Tropikalny"
+ climate_desert: "Pustynny"
+ climate_arid: "Suchy"
+ climate_savannah: "Sawannowy"
+ climate_arctic: "Arktyczny"
+ climate_alpine: "Górski"
+ climate_tundra: "Tundrowy"
 
 ###Rare Buildings
  building_megalfora_mine: "Megaflora Root Mining"
