--- a/planetary_diversity_arcologies/localisation/french/planetarydiversity_more_arcologies_l_french.yml
+++ b/planetary_diversity_arcologies/localisation/french/planetarydiversity_more_arcologies_l_french.yml
@@ -6,6 +6,10 @@ pd_fortress_arcology: "Œcuménopole Forteresse"
 pd_fortress_arcology_desc: "Cette ecumenopolis sert de centre de commandement militaire planétaire, avec des casernes, des installations d'entraînement et des usines de fabrication d'armes à perte de vue."
 pd_commerical_arcology: "Œcuménopole Commerciale"
 pd_commerical_arcology_desc: "Cette ecumenopolis est un carrefour commercial intergalactique, rempli de marchés animés, de vastes pôles commerciaux et d'une infrastructure logistique étendue."
+ pd_garden_arcology_rs: "$pd_garden_arcology$"
+ pd_garden_arcology_rs_desc: "$pd_garden_arcology_desc$"
+ pd_fortress_arcology_rs: "$pd_fortress_arcology$"
+ pd_fortress_arcology_rs_desc: "$pd_fortress_arcology_desc$"
 
 #Districts
 district_pd_arcology_research: "Arcologie de Recherche"
@@ -45,6 +49,14 @@ mod_job_pd_capital_bio_politician_add: "Emplois $job_pd_capital_bio_politician$"
 mod_job_pd_capital_bio_politician_per_pop: "§G+1§! Emploi $job_pd_capital_bio_politician$ par $VALUE$ Habitants"
 mod_job_pd_capital_bio_politician_per_pop_short: "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ par $VALUE$ £pop£"
 job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ transforment £consumer_goods£ §Y$consumer_goods$§! en £unity£ §Y$unity$§! et augmentent §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+ #Rogue Rangers
+ job_pd_robo_ranger: "Biodiversity Drone"
+ job_pd_robo_ranger_plural: "Biodiversity Drones"
+ job_pd_robo_ranger_desc: "Biodiversity Drones are specialized to ensure that our planets remain clean and natural for our Bio-Trophies."
+ mod_job_pd_robo_ranger_add: "$job_pd_robo_ranger$ Jobs"
+ mod_job_pd_robo_ranger_per_pop: "§G+1§! $job_pd_robo_ranger$ Job per $VALUE$ Pops"
+ mod_job_pd_robo_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_robo_ranger_add£ per $VALUE$ £pop£"
+ job_pd_robo_ranger_effect_desc: "$job_pd_robo_ranger$ $job_pd_robo_ranger_plural$ produce £amenities£ §YAmenities§! and £society_research£ §Y$society_research$§!."
 
 #Buildings
 
