--- a/planetary_diversity/localisation/polish/planetarydiversity_start_screen_message_l_polish.yml
+++ b/planetary_diversity/localisation/polish/planetarydiversity_start_screen_message_l_polish.yml
@@ -1,11 +1,11 @@
 ﻿l_polish:
 
- START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape among the rich jungles and shallow seas of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the lush river valleys [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the rich boreal forests [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape among the shaded forests under the constant sun of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape in the twilight zone of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape on the frozen twilight coast of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the great lush caverns of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
+ START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się wśród bogatych dżungli i płytkich mórz [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się w bujnych dolinach rzek [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się w bogatych lasach borealnych [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się wśród zacienionych lasów pod ciągłym słońcem [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się w strefie mroku [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się na zamarzniętym wybrzeżu zmierzchu [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_WET_CAVE: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się w wielkich, bujnych jaskiniach [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_DRY_CAVE: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się w jaskiniach z piaskowca [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
+ START_SCREEN_PART_ONE_COLD_CAVE: "Eony temu od pierwszych prymitywnych [GetSpeciesName] społeczności ukształtowały się w wypełnionych lodem jaskiniach [GetHomeWorldName], nasza cywilizacja rozprzestrzeniła się i prosperowała."
