--- a/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
+++ b/planetary_diversity_arcologies/localisation/polish/planetarydiversity_more_arcologies_l_polish.yml
@@ -7,6 +7,10 @@
  pd_fortress_arcology_desc: "This ecumenopolis serves as a planet-wide military command center, replete with barracks, training facilities, and arms manufacturing plants."
  pd_commerical_arcology: "Commerical Arcology"
  pd_commerical_arcology_desc: "This ecumenopolis is an intergalactic trade nexus, filled with bustling marketplaces, vast commercial hubs, and extensive logistics infrastructure."
+ pd_garden_arcology_rs: "$pd_garden_arcology$"
+ pd_garden_arcology_rs_desc: "$pd_garden_arcology_desc$"
+ pd_fortress_arcology_rs: "$pd_fortress_arcology$"
+ pd_fortress_arcology_rs_desc: "$pd_fortress_arcology_desc$"
 
 #Districts
  district_pd_arcology_research: "Research Arcology"
@@ -46,6 +50,14 @@
  mod_job_pd_capital_bio_politician_per_pop: "§G+1§! $job_pd_capital_bio_politician$ Job per $VALUE$ Pops"
  mod_job_pd_capital_bio_politician_per_pop_short: "\n§G+1§! £mod_job_pd_capital_bio_politician_add£ per $VALUE$ £pop£"
  job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$ turn £consumer_goods£ §Y$consumer_goods$§! into £unity£ §Y$unity$§! and increase §Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+ #Rogue Rangers
+ job_pd_robo_ranger: "Biodiversity Drone"
+ job_pd_robo_ranger_plural: "Biodiversity Drones"
+ job_pd_robo_ranger_desc: "Biodiversity Drones are specialized to ensure that our planets remain clean and natural for our Bio-Trophies."
+ mod_job_pd_robo_ranger_add: "$job_pd_robo_ranger$ Jobs"
+ mod_job_pd_robo_ranger_per_pop: "§G+1§! $job_pd_robo_ranger$ Job per $VALUE$ Pops"
+ mod_job_pd_robo_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_robo_ranger_add£ per $VALUE$ £pop£"
+ job_pd_robo_ranger_effect_desc: "$job_pd_robo_ranger$ $job_pd_robo_ranger_plural$ produce £amenities£ §YAmenities§! and £society_research£ §Y$society_research$§!."
 
 #Buildings
  building_pd_rogue_council: "Bio-Trophy Council"
