--- a/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
+++ b/planetary_diversity_arcologies/localisation/simp_chinese/planetarydiversity_more_arcologies_l_simp_chinese.yml
@@ -5,6 +5,10 @@
  pd_fortress_arcology_desc: "这类普世城是星球规模的军事指挥中心，配备了兵营、训练设施和武器制造厂。"
  pd_commerical_arcology: "商业理想城"
  pd_commerical_arcology_desc: "这种理想城是星际贸易枢纽，里面全是人群熙攘的市场、巨大的商业中心和数量广泛的物流设施。"
+ pd_garden_arcology_rs: "$pd_garden_arcology$"
+ pd_garden_arcology_rs_desc: "$pd_garden_arcology_desc$"
+ pd_fortress_arcology_rs: "$pd_fortress_arcology$"
+ pd_fortress_arcology_rs_desc: "$pd_fortress_arcology_desc$"
  district_pd_arcology_research: "科研理想城"
  district_pd_arcology_research_plural: "科研理想城"
  district_pd_arcology_research_desc: "实验大楼直插云霄，众多人才共处一处，竞争与科研活动一样激烈。"
@@ -38,6 +42,14 @@
  mod_job_pd_capital_bio_politician_per_pop: "每$VALUE$人口§G+1§!$job_pd_capital_bio_politician$岗位"
  mod_job_pd_capital_bio_politician_per_pop_short: "\n每$VALUE$£pop£§G+1§!£mod_job_pd_capital_bio_politician_add£"
  job_pd_capital_bio_effect_desc: "$job_pd_capital_bio_politician$ $job_pd_capital_bio_politician_plural$将£consumer_goods£ §Y$consumer_goods$§!转化为£unity£ §Y$unity$§!，并提升§Y$mod_planet_jobs_complex_and_simple_drone_produces_mult$§!"
+ #Rogue Rangers
+ job_pd_robo_ranger: "Biodiversity Drone"
+ job_pd_robo_ranger_plural: "Biodiversity Drones"
+ job_pd_robo_ranger_desc: "Biodiversity Drones are specialized to ensure that our planets remain clean and natural for our Bio-Trophies."
+ mod_job_pd_robo_ranger_add: "$job_pd_robo_ranger$ Jobs"
+ mod_job_pd_robo_ranger_per_pop: "§G+1§! $job_pd_robo_ranger$ Job per $VALUE$ Pops"
+ mod_job_pd_robo_ranger_per_pop_short: "\n§G+1§! £mod_job_pd_robo_ranger_add£ per $VALUE$ £pop£"
+ job_pd_robo_ranger_effect_desc: "$job_pd_robo_ranger$ $job_pd_robo_ranger_plural$ produce £amenities£ §YAmenities§! and £society_research£ §Y$society_research$§!."
  building_pd_rogue_council: "活体陈设议会"
  building_pd_rogue_council_desc: "将特定活体陈设置于领袖位置上，可以满足其内部的社会等级需求，并可通过故意设计的“政治僵局”塑造出冲突的幻觉。这一策略使子个体可以专注于提升活体陈设的护理水平和满足感。"
  building_navel_base: "海军办公室"
