--- a/planetary_diversity/localisation/korean/planetarydiversity_engine_events_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_engine_events_l_korean.yml
@@ -1,8 +1,8 @@
 ﻿l_korean:
 
 ###Terraforming Event
- pdengine.21.name: "Terraforming Complete"
- pdengine.21.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this world."
+ pdengine.21.name: "테라포밍 완료"
+ pdengine.21.desc: "§Y[From.GetName]§!의 테라포밍을 완료하면 이 세계의 새로운 생물군을 선택할 수 있습니다."
  pdengine.21.continental: "$pc_continental$"
  pdengine.21.retinal: "$pc_pd_retinal$"
  pdengine.21.lake: "$pc_pd_lake$"
@@ -86,15 +86,15 @@
  pdengine.21.lichen: "$pc_pd_lichen$"
 
 ###Gaia Terraforming Event
- pdengine.24.name: "Gaia Terraforming Complete"
- pdengine.24.desc: "As we finish terraforming §Y[Root.GetName]§! we have the opportunity to choose the new biome of this ideal world."
+ pdengine.24.name: "가이아 테라포밍 완료"
+ pdengine.24.desc: "§Y[Root.GetName]§!의 테라포밍을 완료하면 이 이상적인 세계의 새로운 생물군을 선택할 수 있습니다."
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
 
 ###Life Seeded Choice Event
- pdengine.90.name: "$civic_life_seeded$ Biome"
- pdengine.90.desc: "Our people evolved on this paradise of a planet we call §Y[Capital_scope.GetName]§!. What biome is our homeworld?"
+ pdengine.90.name: "$civic_life_seeded$ 생물군계"
+ pdengine.90.desc: "우리는 §Y[Capital_scope.GetName]§!이라고 부르는 이 낙원 행성에서 진화했습니다! 우리의 고향은 어떤 생물군계일까요?"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.90.cold_gaia: "$pc_pd_cold_gaia$"
@@ -103,14 +103,14 @@
  pdengine.90.tidally_locked_gaia: "$pc_pd_gaia_tidally_locked$"
 
 ###Uncommon Gaia Terraforming Event
- pdengine.96.name: "Gaia Terraforming Complete"
- pdengine.96.desc: "As we finish terraforming §Y[From.GetName]§! we have the opportunity to choose the new biome of this ideal world."
- pdengine.96.wet_gaia_cave: "Wet Climate"
- pdengine.96.dry_gaia_cave: "Dry Climate"
- pdengine.96.cold_gaia_cave: "Cold Climate"
- pdengine.96.wet_gaia_superhabitable: "Wet Climate"
- pdengine.96.dry_gaia_superhabitable: "Dry Climate"
- pdengine.96.cold_gaia_superhabitable: "Cold Climate"
- pdengine.96.wet_gaia_tidally_locked: "Wet Climate"
- pdengine.96.dry_gaia_tidally_locked: "Dry Climate"
- pdengine.96.cold_gaia_tidally_locked: "Cold Climate"
+ pdengine.96.name: "가이아 테라포밍 완료"
+ pdengine.96.desc: "§Y[From.GetName]§!의 테라포밍을 완료하면 이 이상적인 세계의 새로운 생물군계를 선택할 수 있습니다."
+ pdengine.96.wet_gaia_cave: "습윤 기후"
+ pdengine.96.dry_gaia_cave: "건조 기후"
+ pdengine.96.cold_gaia_cave: "한랭 기후"
+ pdengine.96.wet_gaia_superhabitable: "습윤 기후"
+ pdengine.96.dry_gaia_superhabitable: "건조 기후"
+ pdengine.96.cold_gaia_superhabitable: "한랭 기후"
+ pdengine.96.wet_gaia_tidally_locked: "습윤 기후"
+ pdengine.96.dry_gaia_tidally_locked: "건조 기후"
+ pdengine.96.cold_gaia_tidally_locked: "한랭 기후"
