--- a/planetary_diversity/localisation/korean/planetarydiversity_start_screen_message_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_start_screen_message_l_korean.yml
@@ -1,11 +1,11 @@
 ﻿l_korean:
 
- START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape among the rich jungles and shallow seas of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the lush river valleys [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "In the eons, since the first primitive [GetSpeciesName] communities took shape in the rich boreal forests [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape among the shaded forests under the constant sun of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape in the twilight zone of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "In the eons since the first primitive [GetSpeciesName] communities took shape on the frozen twilight coast of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_WET_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the great lush caverns of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_DRY_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the sandstone caves of [GetHomeWorldName], our civilization has spread and prospered."
- START_SCREEN_PART_ONE_COLD_CAVE: "In the eons since the first primitive [GetSpeciesName] communities took shape in the ice filled caverns of [GetHomeWorldName], our civilization has spread and prospered."
+ START_SCREEN_PART_ONE_WET_SUPERHABITABLE: "영겁의 세월 동안, [GetHomeWorldName]의 울창한 밀림과 얕은 바다에 최초의 원시 [GetSpeciesName] 공동체가 형성된 이래, 우리 문명은 번성하고 번영했습니다."
+ START_SCREEN_PART_ONE_DRY_SUPERHABITABLE: "영겁의 세월 동안, 최초의 원시 [GetSpeciesName] 공동체가 울창한 강 계곡 [GetHomeWorldName]에 형성된 이래, 우리 문명은 확산되고 번영했습니다."
+ START_SCREEN_PART_ONE_COLD_SUPERHABITABLE: "영겁의 세월 동안, 최초의 원시 [GetSpeciesName] 공동체가 울창한 한대림 [GetHomeWorldName]에 형성된 이래, 우리 문명은 확산되고 번영했습니다."
+ START_SCREEN_PART_ONE_WET_TIDALLY_LOCKED: "최초의 원시 [GetSpeciesName] 공동체가 [GetHomeWorldName]의 끊임없는 태양 아래 그늘진 숲 속에서 형성된 이래, 우리 문명은 번성하고 번영했습니다."
+ START_SCREEN_PART_ONE_DRY_TIDALLY_LOCKED: "최초의 원시 [GetSpeciesName] 공동체가 [GetHomeWorldName]의 황혼 지대에 형성된 이후 오랜 세월 동안, 우리 문명은 번성하고 번영했습니다."
+ START_SCREEN_PART_ONE_COLD_TIDALLY_LOCKED: "얼어붙은 황혼의 [GetHomeWorldName] 해안에서 최초의 원시 [GetSpeciesName] 공동체가 형성된 이래로, 우리 문명은 번성하고 번영했습니다."
+ START_SCREEN_PART_ONE_WET_CAVE: "최초의 원시 [GetSpeciesName] 공동체가 [GetHomeWorldName]의 무성한 동굴에서 형성된 이래로, 우리 문명은 번성하고 번영했습니다."
+ START_SCREEN_PART_ONE_DRY_CAVE: "최초의 원시 [GetSpeciesName] 공동체가 [GetHomeWorldName]의 사암 동굴에서 형성된 이래, 우리 문명은 퍼져나가고 번영했습니다."
+ START_SCREEN_PART_ONE_COLD_CAVE: "얼음이 가득한 [GetHomeWorldName]의 동굴에서 최초의 원시 [GetSpeciesName] 공동체가 형성된 이후, 우리 문명은 퍼져나가고 번영했습니다."
