--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -248,4 +248,4 @@
  pd_sandstone_desc: "这里有着广袤的草原和风蚀砂岩构造。水圈维系着顽强的草本植物，后者已然适应这里的环境。"
  pd_blossom: "花簇世界"
  pd_blossom_desc: "丰沃的草原上点缀着怒放的花卉，这番壮丽之景在轨道上也能看得一清二楚。"
- pd_lilypad: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
+ pd_lilypad_desc: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
