--- a/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
+++ b/planetary_diversity/localisation/german/planetarydiversity_planet_modifiers_l_german.yml
@@ -57,7 +57,7 @@
  pd_aerial: "Aerial Seeds World"
  pd_aerial_desc: "High above the landmasses cloaking in dense vegetation, colossal seed pods, borne by the planet's unique flora, glide through the skies like clouds."
  pd_lilypad: "Lilypad World"
- pd_lilypad: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
+ pd_lilypad_desc: "This planet's warm, shallow oceans support vibrant biodiversity. At the surface, sturdy leaves from aquatic flora form a secondary surface-based ecosystem."
  pd_geothermal: "Geothermal"
  pd_geothermal_desc: "On this planet, vibrant tropical rifts emerge between towering ice cliffs. Beneath the surface, potent geothermal activity sustains millions of warm pools, nurturing thriving biodiversity."
  pd_biolumen: "Bioluminescent World"
