--- a/planetary_diversity/localisation/korean/planetarydiversity_missing_vanilla_concepts_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_missing_vanilla_concepts_l_korean.yml
@@ -2,8 +2,8 @@
 
 ###Missing Vanilla Concepts - to be deleted if ever added
  concept_industrial_district: "$district_industrial$"
- concept_industrial_district_desc: "- £housing£ $MOD_PLANET_HOUSING_ADD$: §G+2§!\n- £mod_job_foundry_add£ ['concept_foundry', $job_foundry$] Jobs: §G+1§!\n- £mod_job_artisan_add£ ['concept_artisan', $job_artisan$] Jobs: §G+1§!\n\n§L$district_industrial_desc$§!"
+ concept_industrial_district_desc: "- £housing£ $MOD_PLANET_HOUSING_ADD$: §G+2§!\n- £mod_job_foundry_add£ ['concept_foundry', $job_foundry$] 직업: §G+1§!\n- £mod_job_artisan_add£ ['concept_artisan', $job_artisan$] 직업: §G+1§!\n\n§L$district_industrial_desc$§!"
  concept_foundry: "$job_foundry_plural$"
- concept_foundry_desc: "£job_foundry£ $job_foundry_plural$ turn £minerals£ §Y$minerals$§! into £alloys£ §Y$alloys$§!\n\n§L$job_foundry_desc$§!"
+ concept_foundry_desc: "£job_foundry£ $job_foundry_plural$는 £minerals£ §Y$minerals$§!을 £alloys£ §Y$alloys$§!으로 바꿉니다.\n\n§L$job_foundry_desc$§!"
  concept_artisan: "$job_artisan_plural$"
- concept_artisan_desc: "£job_artisan£ $job_artisan_plural$ turn £minerals£ §Y$minerals$§! into £consumer_goods£ §Y$consumer_goods$§!\n\n§L$job_artisan_desc$§!"
+ concept_artisan_desc: "£job_artisan£ $job_artisan_plural$은 £minerals£ §Y$minerals$§!을 £consumer_goods£ §Y$consumer_goods$§!로 바꿉니다.\n\n§L$job_artisan_desc$§!"
