--- a/planetary_diversity/localisation/korean/planetarydiversity_vanilla_overwrites_l_korean.yml
+++ b/planetary_diversity/localisation/korean/planetarydiversity_vanilla_overwrites_l_korean.yml
@@ -1,4 +1,4 @@
 ﻿l_korean:
 
 #Overwritten Vanilla Loc
- mod_planet_bureaucrats_unity_produces_mult:1 "£unity£ $unity$ from [GetAdministratorPluralWithIcon]"
+ mod_planet_bureaucrats_unity_produces_mult:1 "[GetAdministratorPluralWithIcon]으로 인한 £unity£ $unity$"
