--- a/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_shroud_l_braz_por.yml
+++ b/planetary_diversity_ascension_worlds/localisation/braz_por/planetarydiversity_aw_shroud_l_braz_por.yml
@@ -3,9 +3,9 @@
 ###Shroud Planets
 #AP
  ap_pd_shroud_worlds: "Unregulated Industrialism"
- ap_pd_shroud_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
+ ap_pd_shroud_worlds_desc: "The barriers between the mortal realm and the Shroud are thinner than expected. Concentrating our psionic energy, we can further weaken these barriers and create worlds that span both dimensions."
  allow_shroud_worlds: "§YUnlocks Decision:§! $decision_pd_aw_shroud_planet$ on non-ideal planets"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- Unlocks £district£ §YGenerator Districts§! and §YMining District§!\n$t$- Blocks all §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
+ describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
 
 #Decisions
  decision_pd_aw_shroud_planet: "Shroud Phasing"
