--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_flooded_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_flooded_l_korean.yml
@@ -1,31 +1,31 @@
 ﻿l_korean:
 
 #Flooded/Aquatic Planets
- decision_pd_aw_flood_planet: "Expand Planetary Sea"
- decision_pd_aw_flood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_flood_planet_tooltip: "Ice will be harvested from a systems with an §Y$sm_ice_mining_station$§!\n§Y$pd_aw_flooded_planet$§! modifer added:\n$pd_aw_flooded_planet_tooltip$"
- flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
- decision_pd_aw_unflood_planet: "Unflood Planet"
- decision_pd_aw_unflood_planet_desc: "This oceanic planet has the potential to be an ideal home for our people. By lowering sea levels and moving cities to islands, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_ringworld: "Flood Ringworld"
- decision_pd_aw_flood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By adjusting sea levels and moving cities underwater, we can ensure that life flourishes for those adapted to live beneath the waves."
- decision_pd_aw_unflood_ringworld: "Unflood Ringworld"
- decision_pd_aw_unflood_ringworld_desc: "This ringworld has the potential to be an ideal home for our people. By lowering sea levels and moving cities back to land, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_unflood_habitat: "Unflood Habitat"
- decision_pd_aw_unflood_habitat_desc: "This habitat has the potential to be an ideal home for our people. By draining this habitat, we can ensure that life flourishes for those adapted to live above the waves."
- decision_pd_aw_flood_habitat_tooltip: "Habitability: §R-20%§!\nConsidered an §YOcean§! world for §YAquatic§! species.\nIce will be harvested from a system with an §Y$sm_ice_mining_station$§! on the starbase."
+ decision_pd_aw_flood_planet: "행성 바다 확장"
+ decision_pd_aw_flood_planet_desc: "이 해양 행성은 우리 종족에게 이상적인 삶의 터전이 될 수 있는 잠재력을 가지고 있습니다. 해수면을 조정하고 도시를 수중으로 옮김으로써 파도 아래에서 살아가는 데 적응한 사람들이 번성할 수 있도록 보장할 수 있습니다."
+ decision_pd_aw_flood_planet_tooltip: "얼음은 §Y$sm_ice_mining_station$§!가 있는 항성계에서 채굴됩니다.\n§Y$pd_aw_flooded_planet$§! 모디파이어 추가:\n$pd_aw_flooded_planet_tooltip$"
+ flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! 거주 적합성: §R-20%§!"
+ decision_pd_aw_unflood_planet: "행성 배수"
+ decision_pd_aw_unflood_planet_desc: "이 해양 행성은 우리 종족에게 이상적인 삶의 터전이 될 수 있는 잠재력을 가지고 있습니다. 해수면을 낮추고 도시를 섬으로 옮기면 파도 위에서 사는 데 적응한 사람들의 삶이 번성할 수 있습니다."
+ decision_pd_aw_flood_ringworld: "링월드 침수"
+ decision_pd_aw_flood_ringworld_desc: "이 링월드는 우리 종족에게 이상적인 보금자리가 될 수 있는 잠재력을 가지고 있습니다. 해수면을 조정하고 도시를 수중으로 옮김으로써 파도 아래에서 살아가는 데 적응한 사람들이 번성할 수 있도록 보장할 수 있습니다."
+ decision_pd_aw_unflood_ringworld: "링월드 배수"
+ decision_pd_aw_unflood_ringworld_desc: "이 링월드는 우리 종족에게 이상적인 삶의 터전이 될 수 있는 잠재력을 가지고 있습니다. 해수면을 낮추고 도시를 육지로 옮기면 파도 위에서의 생활에 적응한 사람들의 삶이 번성할 수 있습니다."
+ decision_pd_aw_unflood_habitat: "거주지 배수"
+ decision_pd_aw_unflood_habitat_desc: "이 거주지는 우리 종족에게 이상적인 보금자리가 될 수 있는 잠재력을 가지고 있습니다. 이 서식지를 배수함으로써 우리는 파도 위에서 살아가는 데 적응한 생물들이 번성할 수 있도록 보장할 수 있습니다."
+ decision_pd_aw_flood_habitat_tooltip: "거주 적합성: §R-20%§!\n§Y수생류§! 종족에게 §Y해양§! 행성으로 취급됩니다.\n얼음은 §Y$sm_ice_mining_station$§!이 있는 항성계의 항성 기지에서 채굴됩니다."
 
- flooded_habitat: "Flooded"
- flooded_habitat_desc: "Engulfed by water, this world faithfully mirrors the idyllic environment of aquatic denizens."
- pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! Habitability: §R-20%§!"
+ flooded_habitat: "침수된"
+ flooded_habitat_desc: "물로 둘러싸인 이 세계는 수생류 거주자들의 목가적인 환경을 충실히 반영하고 있습니다."
+ pd_aw_flooded_planet_tooltip: "$MOD_PLANET_MAX_DISTRICTS_ADD$: §G+3§!\n$MOD_POP_GROWTH_SPEED$: §G+10%§!\n$mod_planet_jobs_produces_mult$: §G+5%§!\n§YNon-Aquatic§! 거주 적합성: §R-20%§!"
 
- pd_aw_flooded_planet: "Flooded World"
- pd_aw_flooded_planet_desc: "This oceanic planet is an ideal home for aquatic species. Life flourishes for those adapted to live beneath the waves."
- pd_aw_flooded_habitat: "Flooded Habitat"
- pd_aw_flooded_habitat_desc: "This habitat has been flooded with water, imitating the natural environment of Aquatic creatures."
+ pd_aw_flooded_planet: "침수된 행성"
+ pd_aw_flooded_planet_desc: "이 해양 행성은 수생류 종족에게 이상적인 서식지입니다. 파도 아래에서 살아가는 데 적응한 생명체들이 번성합니다."
+ pd_aw_flooded_habitat: "침수된 거주지"
+ pd_aw_flooded_habitat_desc: "이 거주지는 수생 생물의 자연 환경을 모방하여 물로 가득 채워져 있습니다."
 
- ICE_MINING_PLANET_SUCCESS_TITLE: "Planet Flooded"
- ICE_MINING_PLANET_SUCCESS_DESC: "Using ice mined from the $SYSTEM|Y$ system, we have managed to flood §Y[This.GetName]§!."
+ ICE_MINING_PLANET_SUCCESS_TITLE: "행성 침수"
+ ICE_MINING_PLANET_SUCCESS_DESC: "$SYSTEM|Y$ 항성계에서 채굴한 얼음을 사용하여 §Y[This.GetName]§!에 홍수를 일으켰습니다."
 
  ocean_paradise_2: "$ocean_paradise$"
  ocean_paradise_2_desc: "$ocean_paradise_desc$"
