--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_l_korean.yml
@@ -1,12 +1,12 @@
 ﻿l_korean:
 
 #Terraforming Warning
- pd_planet_no_terraform: "$TRIGGER_FAIL$ This planet cannot be terraformed with standard procedures."
+ pd_planet_no_terraform: "$TRIGGER_FAIL$ 이 행성은 표준 절차로는 테라포밍이 불가능합니다."
 
 ###Arcology/Relic
- pc_pd_nuked_arcology: "Nuked Relic World"
- pc_pd_nuked_arcology_desc: "A city once stretched across this entire world. It is experiencing a nuclear winter, with dense layers of sooty aerosols in the atmosphere. High levels of surface radiation. Minimal signs of life."
- pc_pd_nuked_arcology_tooltip: "Habitability: §R-100%§!\nHabitability: §G+100%§! with §Y$trait_pc_nuked_preference$§! or §Y$trait_survivor$§! trait"
+ pc_pd_nuked_arcology: "피폭된 유물 행성"
+ pc_pd_nuked_arcology_desc: "한때 전 행성에 걸쳐 뻗어 있던 도시입니다. 현재 대기 중 그을음 에어로졸 층이 짙게 깔린 핵 겨울을 겪고 있습니다. 표면 방사능이 높은 수준입니다. 최소한의 생명체 흔적만 있습니다."
+ pc_pd_nuked_arcology_tooltip: "거주 적합성: §R-100%§!\n거주 적합성: §Y$trait_pc_nuked_preference$§!이나 §Y$trait_survivor$§! 특성이라면 §G+100%§!"
 
 ###Dummy Class Warning
  DO_NOT_USE: "DUMMY CLASS - DO NOT USE"
