--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_lithoid_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_lithoid_l_korean.yml
@@ -1,48 +1,48 @@
 ﻿l_korean:
 ###Lithoid Planets
 #Decision
- decision_pd_aw_lithoid_planet: "Create Lithotrophic Ecosystem"
- decision_pd_aw_lithoid_planet_desc: "This world waits to be etched into one of crystal and stone. The feeble biological ecosystem sits in our way."
- decision_pd_aw_lithoid_planet_effects_short: "A lithotrophic ecosystem will be chiseled on this world, enabling us to finely tune the crystalline frequencies to better suit our needs."
- decision_pd_aw_lithoid_planet_tooltip: "Once complete, we will be able to choose the frequency of this planet's lithotrophic crystals."
- decision_pd_aw_lithoid_planet_cleanup: "Restore Biological Ecosystem"
- decision_pd_aw_lithoid_planet_cleanup_desc: "We must restore this planet's biological ecosystem to its original glory."
- decision_pd_aw_lithoid_planet_cleanup_effects_short: "The artificially created lithotrophic ecosystem will be removed, restoring it to a biological nature."
- decision_pd_aw_lithoid_planet_cleanup_tooltip: "All Lithotrophic Modifiers will be removed, and the planet will be returned to a biological ecosystem."
- decision_pd_aw_lithoid_change_frequency: "Change Lithotrophic Frequency"
- decision_pd_aw_lithoid_change_frequency_desc: "We will change the frequency of the lithotrophic ecosystem crystals to better suit our needs."
- decision_pd_aw_lithoid_change_frequency_effects_short: "We can change the frequency of this planet's crystals."
- decision_pd_aw_lithoid_change_frequency_tooltip: "The current Lithotrophic modifier will be removed, allowing us to change it to a different frequency."
+ decision_pd_aw_lithoid_planet: "석질 영양 생태계 만들기"
+ decision_pd_aw_lithoid_planet_desc: "이 행성은 수정과 돌로 새겨지기를 기다립니다. 미약한 생물학적 생태계가 우리의 앞길을 가로막고 있습니다."
+ decision_pd_aw_lithoid_planet_effects_short: "이 행성에 석질 영양 생태계가 형성되어 결정의 주파수를 우리의 필요에 더 잘 맞도록 미세하게 조정할 수 있습니다."
+ decision_pd_aw_lithoid_planet_tooltip: "완료되면 우리는 이 행성의 석질 영양 결정의 주파수를 선택할 수 있을 것입니다."
+ decision_pd_aw_lithoid_planet_cleanup: "생물학적 생태계 복원"
+ decision_pd_aw_lithoid_planet_cleanup_desc: "우리는 행성의 생물학적 생태계를 원래의 영광으로 회복시켜야 합니다."
+ decision_pd_aw_lithoid_planet_cleanup_effects_short: "인위적으로 조성된 석질 영양 생태계를 제거하여 생물학적 자연으로 복원할 것입니다."
+ decision_pd_aw_lithoid_planet_cleanup_tooltip: "모든 석질 영양 모디파이어가 제거되고 행성은 생물학적 생태계로 돌아갑니다."
+ decision_pd_aw_lithoid_change_frequency: "석질 영양 주파수 변경"
+ decision_pd_aw_lithoid_change_frequency_desc: "석질 영양 생태계 결정의 주파수를 필요에 맞게 변경할 것입니다."
+ decision_pd_aw_lithoid_change_frequency_effects_short: "이 행성의 결정의 주파수를 바꿀 수 있습니다."
+ decision_pd_aw_lithoid_change_frequency_tooltip: "현재 석질 영양 모디파이어가 제거되어 다른 주파수로 변경할 수 있습니다."
 
 #Modifiers
- pd_aw_lithoid_planet_cyan: "Lithotrophic World"
- pd_aw_lithoid_planet_cyan_desc: "Frequency: 500 nm\nThe resonating vibrations foster goodwill and catalyze an accelerated growth rate for Lithoids."
- pd_aw_lithoid_planet_red: "Lithotrophic World"
- pd_aw_lithoid_planet_red_desc: "Frequency: 650 nm\nThe robust crystalline resonance synergizes seamlessly with mineral deposits, rendering them more accessible for extraction."
- pd_aw_lithoid_planet_yellow: "Lithotrophic World"
- pd_aw_lithoid_planet_yellow_desc: "Frequency: 580 nm\nThe dynamic harmonics of this crystalline resonance seamlessly integrate with our power networks, unlocking their total capacity."
+ pd_aw_lithoid_planet_cyan: "석질 영양 행성"
+ pd_aw_lithoid_planet_cyan_desc: "주파수: 500 nm\n공명 진동은 선의를 촉진하고 석질류의 성장 속도를 가속화하는 촉매제가 됩니다."
+ pd_aw_lithoid_planet_red: "석질 영양 행성"
+ pd_aw_lithoid_planet_red_desc: "주파수: 650 nm\n강력한 결정 공명은 광물 침전물과 원활하게 시너지 효과를 내어 광물 추출에 더 쉽게 접근할 수 있게 해줍니다."
+ pd_aw_lithoid_planet_yellow: "석질 영양 행성"
+ pd_aw_lithoid_planet_yellow_desc: "주파수: 580 nm\n이 결정 공명의 동적 고조파는 전력 네트워크와 원활하게 통합되어 총 용량을 극대화합니다."
 
 #Acension Perk
- ap_pd_lithoid_worlds: "Lithotrophic Worlds"
- ap_pd_lithoid_worlds_desc: "We will sculpt our worlds into unyielding lithotrophic paradises, forging a bedrock of eternal stability."
- allow_lithoid_worlds: "§HUnlocks Decision:§! $decision_pd_aw_lithoid_planet$"
- describe_lithoid_worlds: "§YLithotrophic Worlds§! are a special planet class with lithotrophic based ecosystems, which allows for frequency tuning of large crystal structure which can improve $i_unity$, $i_minerals$ or $i_energy$.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_pop_growth_speed$: §G20%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
+ ap_pd_lithoid_worlds: "석질 영양 행성"
+ ap_pd_lithoid_worlds_desc: "우리는 우리의 세계를 흔들리지 않는 석질 낙원으로 조각하여 영원한 안정의 기반을 다질 것입니다."
+ allow_lithoid_worlds: "§H결정 해제:§! $decision_pd_aw_lithoid_planet$"
+ describe_lithoid_worlds: "§Y석질 영양 행성§!는 석질 영양 기반 생태계를 가진 특수 행성 구분으로, $i_unity$, $i_minerals$, $i_energy$를 증가시킬 수 있는 큰 결정 구조물의 주파수 튜닝이 가능합니다.\n$MOD_LITHOID_POP_HAPPINESS$: §G25%§!\n$mod_LITHOID_pop_growth_speed$: §G20%§!\n$MOD_BIOLOGICAL_POP_HAPPINESS$: §R-50%§!\n$mod_BIOLOGICAL_pop_growth_speed_reduction$: §R-50%§!"
 
 #Notification Message
- MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$ is now a §YLithotrophic World§!"
- MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Complete"
- MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "The biological biome on $PLANET|Y$ as been restored."
- MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "Lithotrophic Biome Removed"
+ MESSAGE_PD_AW_LITHOID_DESC:1 "$PLANET|Y$은 이제 §YLithotrophic World§!입니다."
+ MESSAGE_PD_AW_LITHOID_MESSAGE_TYPE_TITLE: "석질 영양 생물군계 완료"
+ MESSAGE_PD_AW_LITHOID_CLEANUP_DESC:1 "$PLANET|Y$의 생물학적 생물군계가 복원되었습니다."
+ MESSAGE_PD_AW_LITHOID_CLEANUP_MESSAGE_TYPE_TITLE: "석질 영양 생물군계 제거"
 
 #Choose Event
- pdawlithoidplanets.100.name: "Crystalline Frequency"
- pdawlithoidplanets.100.desc: "What resonant frequency shall we attune the lithotrophic biome on §Y[This.GetName]§!?"
- pdawlithoidplanets.100.cyan: "Cyan"
- pdawlithoidplanets.100.cyan.tooltip: "This resonating frequency acts as a cohesive force, fostering unity among our lithoid populace and nurturing a harmonious surge in population growth."
- pdawlithoidplanets.100.red: "Red"
- pdawlithoidplanets.100.red.tooltip: "This resonance synergizes seamlessly with mineral deposits, rendering them more accessible and ripe for extraction.""
- pdawlithoidplanets.100.yellow: "Yellow"
- pdawlithoidplanets.100.yellow.tooltip: "This resonating frequency seamlessly integrates with our power networks, unlocking a surge in their total capacity."
+ pdawlithoidplanets.100.name: "결정 주파수"
+ pdawlithoidplanets.100.desc: "§Y[This.GetName]§!에 어떤 공진 주파수로 석질 영양 생물군계를 조율할까요?"
+ pdawlithoidplanets.100.cyan: "청록색"
+ pdawlithoidplanets.100.cyan.tooltip: "이 공명 주파수는 응집력 있는 힘으로 작용하여 석질류 인구의 통합을 촉진하고 조화로운 인구 증가를 촉진합니다."
+ pdawlithoidplanets.100.red: "적색"
+ pdawlithoidplanets.100.red.tooltip: "이 공명은 광물 매장지와 원활하게 시너지 효과를 내어 광물에 더 쉽게 접근하고 추출할 수 있게 해줍니다."
+ pdawlithoidplanets.100.yellow: "황색"
+ pdawlithoidplanets.100.yellow.tooltip: "이 공진 주파수는 전력 네트워크와 원활하게 통합되어 총 용량이 급증합니다."
 
 #Dummy Classes
  pc_pd_lithoid_cyan: "$DO_NOT_USE$"
