--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_planetary_infesters_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_planetary_infesters_l_korean.yml
@@ -2,19 +2,20 @@
 
 ###Planetary Infesters
 #Civic
- civic_hive_pd_planetary_infesters: "Planetary Infesters"
- civic_hive_pd_planetary_infesters_desc: "This hive mind embeds itself into a planet's ecosystems. Each world becomes an extension of itself, flourishing as a unified network under its guidance."
- civic_tooltip_pd_planetary_infesters_effects: "Can build £building£ $building_pd_aw_planet_infester_1$\n- $building_pd_planet_infestor_desc$\n- Homeworld is a $pc_hive$"
+ civic_hive_pd_planetary_infesters: "행성 감염체"
+ civic_hive_pd_planetary_infesters_desc: "이 군체의식은 행성의 생태계에 스스로를 내재화합니다. 각 행성은 그 자체의 연장선상에 있으며, 그 지도 아래 통합된 체계로 번성합니다."
+ civic_tooltip_pd_planetary_infesters_effects: "£building£ $building_pd_aw_planet_infester_1$을 건설할 수 있습니다.\n- $building_pd_planet_infestor_desc$\n- 고향 행성은 $pc_hive$입니다."
 
 #Buildings
- building_pd_planet_infestor_desc: "§YInfesting Nodes§! evolve through three upgrade phases, progressively converting the planet into a §YHive World§!."
- building_pd_aw_planet_infester_1: "Infestation Node - First Phase"
- building_pd_aw_planet_infester_1_desc: "This node, the heart of the initial infestation stage, is vital to the hive's presence on this planet. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_2: "Infestation Node - Second Phase"
- building_pd_aw_planet_infester_2_desc: "This massive node, now in the intermediate infestation stage, wields a connection to the hive robust enough to manipulate critical planetary processes. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_3: "Planetary Infestation Node"
- building_pd_aw_planet_infester_3_desc: "Having reached its zenith, this formidable node exerts total dominion over all planetary processes. Its loss would unravel the hive's grip here."
- building_pd_aw_planet_infester_3_effect_desc: "This planet will be transformed into a §Y$pc_hive$§!."
+ building_pd_planet_infestor_desc: "§Y감염 노드§!는 세 단계를 통해 진화하며, 행성을 점진적으로 §Y군체 행성§!으로 전환합니다."
+ 
+ building_pd_aw_planet_infester_1: "감염 노드 - 첫 번째 단계"
+ building_pd_aw_planet_infester_1_desc: "초기 감염 단계의 핵심인 이 노드는 군체가 행성에 존재하는 데 필수적인 역할을 합니다. 이 노드를 잃으면 행성의 지배력이 무너집니다."
+ building_pd_aw_planet_infester_2: "감염 노드 - 두 번째 단계"
+ building_pd_aw_planet_infester_2_desc: "현재 중간 감염 단계에 있는 이 거대한 노드는 행성의 중요한 과정들을 조작할 수 있을 만큼 강력한 군체와의 연결 고리를 휘두르고 있습니다. 이 노드를 잃으면 행성의 지배력이 무너집니다."
+ building_pd_aw_planet_infester_3: "행성 감염 노드"
+ building_pd_aw_planet_infester_3_desc: "정점에 도달한 이 강력한 노드는 행성의 모든 과정을 완전히 지배합니다. 이 노드를 잃으면 행성의 지배력이 무너집니다."
+ building_pd_aw_planet_infester_3_effect_desc: "이 행성은 §Y$pc_hive$§!으로 테라포밍됩니다."
 
 #Dummy Class
  pc_hive_dummy: "$pc_hive$"
@@ -25,6 +26,6 @@
  trait_pc_hive_dummy_preference_desc: "$trait_pc_hive_preference_desc$"
 
 #Events
- pdawplanetaryinfesters.120.name: "Planetary Hive Complete"
- pdawplanetaryinfesters.120.desc: "As the node reaches its full potential, we resonate with a profound sense of accomplishment.\n\nThis moment marks a significant leap in the hive's conrol of [Root.GetName], solidifying its grasp over the planet."
- pdawplanetaryinfesters.120.a: "Another home for the hive."
+ pdawplanetaryinfesters.120.name: "행성 군체 완료"
+ pdawplanetaryinfesters.120.desc: "노드가 잠재력을 최대한 발휘할 때, 우리는 깊은 성취감을 느낍니다.\n\n이 순간은 [Root.GetName]에 대한 하이브의 통제력이 크게 도약하여 행성에 대한 지배력을 확고히 하는 순간입니다."
+ pdawplanetaryinfesters.120.a: "군체를 위한 또 다른 집입니다."
