--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_shroud_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_shroud_l_korean.yml
@@ -2,29 +2,29 @@
 
 ###Shroud Planets
 #AP
- ap_pd_shroud_worlds: "Unregulated Industrialism"
- ap_pd_shroud_worlds_desc: "The barriers between the mortal realm and the Shroud are thinner than expected. Concentrating our psionic energy, we can further weaken these barriers and create worlds that span both dimensions."
- allow_shroud_worlds: "§YUnlocks Decision:§! $decision_pd_aw_shroud_planet$ on non-ideal planets"
- describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! modifier:\n$t$- "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
+ ap_pd_shroud_worlds: "장막 위상 전이"
+ ap_pd_shroud_worlds_desc: "물질계와 장막 사이의 장벽은 예상보다 얇습니다. 사이오닉 에너지를 집중하면 이 장벽을 더욱 약화시키고 두 차원에 걸친 행성을 만들 수 있습니다."
+ allow_shroud_worlds: "§Y결정 해제:§! $decision_pd_aw_shroud_planet$"
+ describe_shroud_worlds: "§Y$decision_pd_aw_shroud_planet$§! 모디파이어:\n$t$- "§GPsionic§! £pop£ 팝:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ 팝:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§"
 
 #Decisions
- decision_pd_aw_shroud_planet: "Shroud Phasing"
- decision_pd_aw_shroud_planet_desc: "We can weaken the barrier between this planet and the Shroud and create a balance between the material and psionic realms."
- decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! modifier added.\n\nIncreases £pop£ §GPsionic Pop Output§! but reduces £pop£ §YNon-Psionic Pop Output§!."
- decision_pd_aw_shroud_planet_cleanup: "Phase-Lock Planet"
- decision_pd_aw_shroud_planet_cleanup_desc: "Our physicists can strengthen the barrier between this planet and the Shroud, locking it in the material realm."
- decision_pd_aw_shroud_planet_cleanup_tooltip: "\nWe will remove the psionic influence from this planet."
+ decision_pd_aw_shroud_planet: "장막 위상 전이"
+ decision_pd_aw_shroud_planet_desc: "우리는 이 행성과 장막 사이의 장벽을 약화시키고 물질과 사이오닉 영역 사이에 균형을 이룰 수 있습니다."
+ decision_pd_aw_shroud_planet_effects_short: "§Y$pd_aw_shroud_planet$§! 모디파이어 추가.\n\n£pop£ §GPsionic Pop Output§!을 증가시키만£pop£ §YNon-Psionic Pop Output§!을 감소시킵니다."
+ decision_pd_aw_shroud_planet_cleanup: "위상 고정 행성"
+ decision_pd_aw_shroud_planet_cleanup_desc: "우리 물리학자들은 이 행성과 장막 사이의 장벽을 강화하여 물질 영역에 고정할 수 있습니다."
+ decision_pd_aw_shroud_planet_cleanup_tooltip: "\n우리는 이 행성에서 사이오닉 영향력을 제거할 것입니다."
 
 #Modifiers
- pd_aw_shroud_planet: "Shroud Touched"
- pd_aw_shroud_planet_desc: "In this place, the deliberately weakened barrier between the material realm and the Shroud has enabled individuals with psychic abilities to reshape reality to a certain extent. However, for those without such gifts, the line between nightmare and reality blurs, giving rise to an endless tapestry of suffering and torment."
- pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ Pops:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ Pops:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
+ pd_aw_shroud_planet: "장막과 접촉한"
+ pd_aw_shroud_planet_desc: "이곳에서는 물질계와 장막 사이의 장벽이 의도적으로 약화되어 초능력을 가진 개인이 현실을 어느 정도 재구성할 수 있습니다. 그러나 그러한 능력이 없는 사람들에게는 악몽과 현실 사이의 경계가 모호해져 끝없는 고통과 괴로움의 태피스트리가 펼쳐집니다."
+ pd_aw_shroud_planet_tooltip: "§GPsionic§! £pop£ 팝:\n- $mod_planet_psionic_jobs_produces_mult$: §G10%§!\n- $MOD_POP_HAPPINESS$: §G10%§!\n\n§YNon-Psionic§! £pop£ 팝:\n- £mod_pop_environment_tolerance£ §YPlanet Habitability§!: §R-50%§!\n- $MOD_POP_HAPPINESS$: §R-25%§!\n- $MOD_POP_GROWTH_SPEED$: §R-25%§!"
  pd_shroud_planet: "$pd_aw_shroud_planet$"
  pd_shroud_planet_desc: "$pd_aw_shroud_planet_desc$"
  pd_shroud_planet_tooltip: "$pd_aw_shroud_planet_tooltip$"
 
 #Notification Message
- MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$ is now §Y$pd_aw_shroud_planet$§!"
- MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "Planetary Shroud Communion Complete"
- MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "The influence of the Shourd has been removed on $PLANET|Y$."
- MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "Planet Unshrouded"
+ MESSAGE_PD_AW_SHROUD_DESC:1 "$PLANET|Y$은 이제 §Y$pd_aw_shroud_planet$§!입니다."
+ MESSAGE_PD_AW_SHROUD_MESSAGE_TYPE_TITLE: "행성 장막 교감 완료"
+ MESSAGE_PD_AW_SHROUD_CLEANUP_DESC:1 "장막의 영향력이 $PLANET|Y$에서 제거되었습니다."
+ MESSAGE_PD_AW_SHROUD_CLEANUP_MESSAGE_TYPE_TITLE: "행성 장막 제거"
