--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_superprojects_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_superprojects_l_korean.yml
@@ -1,74 +1,74 @@
 ﻿l_korean:
 #Planetary Superprojects
  #Notification
- MESSAGE_PD_AW_SUPERPROJECT_DESC: "The superproject on $PLANET|Y$ is complete."
- MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "Planetary Superproject Complete"
+ MESSAGE_PD_AW_SUPERPROJECT_DESC: "$PLANET|Y$의 슈퍼 프로젝트가 완료되었습니다."
+ MESSAGE_PD_AW_SUPERPROJECT_MESSAGE_TYPE_TITLE: "행성 슈퍼 프로젝트 완료"
 
 #Core Tap
  #Planet Class
- pc_pd_core_tap: "Core Tap"
- pc_pd_core_tap_desc: "This rocky world now hosts a vast network of machines burrowing into its core to extract primal energy, a testament to engineering prowess that has destroyed the planet's original ecosystem."
- pc_pd_core_tap_adj: "energetic"
- mod_pc_pd_core_tap_habitability: "Core Tap Habitability"
- trait_pc_pd_core_tap_preference: "Core Tap Prefernce"
+ pc_pd_core_tap: "핵 천공 행성"
+ pc_pd_core_tap_desc: "이 암석형 행성에는 이제 원시적인 에너지를 추출하기 위해 코어를 파고드는 방대한 기계 네트워크가 있으며, 이는 행성의 원래 생태계를 파괴한 공학적 기술의 증거입니다."
+ pc_pd_core_tap_adj: "에너지의"
+ mod_pc_pd_core_tap_habitability: "핵 천공 행성 거주 적합도"
+ trait_pc_pd_core_tap_preference: "핵 천공 행성 선호"
  trait_pc_pd_core_tap_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_core_tap: "Planetary Superproject: Core Tap"
- decision_pd_aw_core_tap_desc: "By creating a network of machines that burrow into the very core of this world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- decision_pd_megacoretap_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_generator_plural$§!"
+ decision_pd_aw_core_tap: "행성 슈퍼 프로젝트: 핵 천공 행성"
+ decision_pd_aw_core_tap_desc: "이 행성의 중심부에 파고드는 기계 네트워크를 만들면 행성 생태계를 희생시키면서 엄청난 양의 에너지를 생산할 수 있습니다."
+ decision_pd_megacoretap_requirements: "£trigger_no£ §Y$district_generator_plural$§! §R만 남게 됩니다.§!"
 
  #Modifier
- pd_aw_core_tap: "Core Tap"
- pd_aw_core_tap_desc: "This world boasts a vast network of machines burrowing into its core to extract primal energy, but destorying the orignal ecosystem in the process."
+ pd_aw_core_tap: "핵 천공 행성"
+ pd_aw_core_tap_desc: "이 세계는 원시적인 에너지를 추출하기 위해 코어로 파고드는 방대한 기계 네트워크를 자랑하지만, 그 과정에서 원래의 생태계를 파괴합니다."
 
  #Technology
- tech_pd_planetary_core_tap: "Planetary Superproject: Core Tap"
- tech_pd_planetary_core_tap_desc: "By creating a network of machines that burrow into the very core of a world, we will be able to generate an incredible amount of energy at the expense of the planet's ecosystem."
- tech_pd_planetary_core_tap_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_core_tap$"
+ tech_pd_planetary_core_tap: "행성 슈퍼 프로젝트: 핵 천공 행성"
+ tech_pd_planetary_core_tap_desc: "행성의 중심부에 파고드는 기계 네트워크를 만들면 행성 생태계를 희생시키면서 엄청난 양의 에너지를 생산할 수 있습니다."
+ tech_pd_planetary_core_tap_tooltip: "§H결정 해제:§! $decision_pd_aw_core_tap$"
 
 #Agriworld
  #Planet Class
- pc_pd_agriworld: "Agriworld"
- pc_pd_agriworld_desc: "This rocky planet brims with endless industrial farming heavily relying on potent fertilizers, complex weather control, and advanced irrigation systems. While it sustains an unceasing bounty, it has replaced the planet's natural ecosystem."
- pc_pd_agriworld_adj: "agarian"
- mod_pc_pd_agriworld_habitability: "Agriworld Habitability"
- trait_pc_pd_agriworld_preference: "Agriworld Prefernce"
+ pc_pd_agriworld: "초농업 행성"
+ pc_pd_agriworld_desc: "이 암석형 행성은 강력한 비료, 복잡한 날씨 제어, 첨단 관개 시스템에 크게 의존하는 끝없는 산업 농업으로 가득 차 있습니다. 끊임없는 풍요로움을 유지하는 동안 행성의 자연 생태계는 대체되었습니다."
+ pc_pd_agriworld_adj: "농업의"
+ mod_pc_pd_agriworld_habitability: "초농업 행성 거주 적합도"
+ trait_pc_pd_agriworld_preference: "초농업 행성 선호"
  trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_agriworld: "Planetary Superproject: Agriworld"
- decision_pd_aw_agriworld_desc: "By transforming this planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- decision_pd_agriworld_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_farming_plural$§!"
+ decision_pd_aw_agriworld: "행성 슈퍼 프로젝트: 초농업 행성"
+ decision_pd_aw_agriworld_desc: "이 행성을 초농업 행성으로 탈바꿈시켜 광활한 산업 농경지를 조성함으로써 자연 생태계를 풍요로운 인공 농업으로 대체할 것입니다."
+ decision_pd_agriworld_requirements: "£trigger_no£ §Y$district_farming_plural$§! §R만 남게 됩니다.§!"
 
  #Modifier
- pd_aw_agriworld: "Agriworld"
- pd_aw_agriworld_desc: "This world boasts industrial farming that heavily relies on potent fertilizers, complex weather control, and advanced irrigation systems."
+ pd_aw_agriworld: "초농업 행성"
+ pd_aw_agriworld_desc: "이 행성은 강력한 비료, 복잡한 날씨 제어, 첨단 관개 시스템에 크게 의존하는 산업 농업을 자랑합니다."
 
  #Technology
- tech_pd_planetary_agriworld: "Planetary Superproject: Agriworld"
- tech_pd_planetary_agriworld_desc: "By transforming a planet into an Agriworld, we will create vast fields of industrial farming, replacing the natural ecosystem with a bountiful, artificial agricultural expanse."
- tech_pd_planetary_agriworld_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_agriworld$"
+ tech_pd_planetary_agriworld: "행성 슈퍼 프로젝트: 초농업 행성"
+ tech_pd_planetary_agriworld_desc: "행성을 초농업 행성으로 탈바꿈시켜 광활한 산업 농경지를 조성함으로써 자연 생태계를 풍요로운 인공 농업으로 대체할 것입니다."
+ tech_pd_planetary_agriworld_tooltip: "§H결정 해제:§! $decision_pd_aw_agriworld$"
 
 #Stripmine
  #Planet Class
- pc_pd_stripmine: "Stripmine"
- pc_pd_stripmine_desc: "This planet is now an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs. The natural ecosystem has been ruined in the ceaseless quest for resources."
- pc_pd_stripmine_adj: "mining"
- mod_pc_pd_stripmine_habitability: "Stripmine Habitability"
- trait_pc_pd_stripmine_preference: "Stripmine Prefernce"
+ pc_pd_stripmine: "노천 광산 행성"
+ pc_pd_stripmine_desc: "이 행성은 이제 깊은 채굴 작업의 광활한 땅이 되었고, 지표면은 산업용 굴삭기와 시추 장비의 미로로 뒤덮여 있습니다. 자원을 향한 끊임없는 탐욕으로 자연 생태계는 파괴되었습니다."
+ pc_pd_stripmine_adj: "광업의"
+ mod_pc_pd_stripmine_habitability: "노천 광산 행성 거주 적합도"
+ trait_pc_pd_stripmine_preference: "노천 광산 행성 선호"
  trait_pc_pd_stripmine_preference_desc: "$trait_pc_arctic_preference_desc$"
 
  #Decision
- decision_pd_aw_stripmine: "Planetary Superproject: Stripmine"
- decision_pd_aw_stripmine_desc: "We could collect resources from every inch of this planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- decision_pd_stripmine_requirements: "£trigger_no£ §RThere can be no other districts but§! §Y$district_mining_plural$§!"
+ decision_pd_aw_stripmine: "행성 슈퍼 프로젝트: 노천 광산 행성"
+ decision_pd_aw_stripmine_desc: "우리는 첨단 산업용 굴삭기와 시추 장비를 건설하여 행성 표면 구석구석에서 자원을 채취할 수 있습니다. 이 과정에서 자연 생태계는 상당한 피해를 입을 것입니다."
+ decision_pd_stripmine_requirements: "£trigger_no£ §Y$district_mining_plural$§! §R만 남게 됩니다.§!"
 
  #Modifier
- pd_aw_stripmine: "Stripmine"
- pd_aw_stripmine_desc: "This planet is an expanse of deep strip-mining operations, its surface crisscrossed by a labyrinth of industrial excavators and drill rigs."
+ pd_aw_stripmine: "노천 광산 행성"
+ pd_aw_stripmine_desc: "이 행성은 심해 채굴 작업이 이루어지는 광활한 행성으로, 표면에는 산업용 굴삭기와 굴착 장비가 미로처럼 얽혀 있습니다."
 
  #Technology
- tech_pd_planetary_stripmine: "Planetary Superproject: Stripmine"
- tech_pd_planetary_stripmine_desc: "We could collect resources from every inch of a planet's surface by constructing advanced industrial excavators and drill rigs. The natural ecosystem will significantly suffer from the process."
- tech_pd_planetary_stripmine_tooltip: "§HUnlocks Decision:§! $decision_pd_aw_stripmine$"
+ tech_pd_planetary_stripmine: "행성 슈퍼 프로젝트: 노천 광산 행성"
+ tech_pd_planetary_stripmine_desc: "우리는 첨단 산업용 굴삭기와 시추 장비를 건설하여 행성 표면 구석구석에서 자원을 채취할 수 있습니다. 이 과정에서 자연 생태계는 큰 타격을 입을 것입니다."
+ tech_pd_planetary_stripmine_tooltip: "§H결정 해제:§! $decision_pd_aw_stripmine$"
