--- a/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_wasteland_l_korean.yml
+++ b/planetary_diversity_ascension_worlds/localisation/korean/planetarydiversity_aw_wasteland_l_korean.yml
@@ -2,29 +2,29 @@
 
 ###Wasteland Planets
 #AP
- ap_pd_wasteland_worlds: "Unregulated Industrialism"
- ap_pd_wasteland_worlds_desc: "In pursuing unrestrained productivity, we must cast aside environmental constraints to unlock the planet's true industrial potential."
- allow_wasteland_worlds: "§YUnlocks Decision:§! $decision_pd_aw_wasteland_planet$ on non-ideal planets"
- describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! modifier:\n$t$- Unlocks £district£ §YGenerator Districts§! and §YMining District§!\n$t$- Blocks all §YAgriculture Districts§!\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
+ ap_pd_wasteland_worlds: "규제 없는 산업주의"
+ ap_pd_wasteland_worlds_desc: "환경 문제는 우리의 발목을 잡을 뿐입니다. 행성의 자연 생태계 상태를 무시한다면 행성의 진정한 산업적 잠재력을 발휘할 수 있습니다."
+ allow_wasteland_worlds: "§Y결정 해제:§! 이상적이지 않은 행성에 $decision_pd_aw_wasteland_planet$"
+ describe_wasteland_worlds: "§Y$decision_pd_aw_wasteland_planet$§! 모디파이어:\n$t$- £district£ §YGenerator Districts§!와 §YMining District§!의 최대 제한을 해제\n$t$- §YAgriculture  Districts§! 건설 불가\n$t$- $MOD_HABITABILITY_CEIL$: §Y60%§!\n$t$- $mod_planet_jobs_alloys_produces_mult$: §G100%§!\n$t$- $mod_planet_jobs_consumer_goods_produces_mult$: §G100%§!\n$t$- $mod_planet_chemists_produces_mult$: §G50%§!\n$t$- $mod_planet_refiners_produces_mult$: §G50%§!\n$t$- $mod_planet_translucers_produces_mult$: §G50%§!"
 
 #Decisions
- decision_pd_aw_wasteland_planet: "Unregulated Industrial Standards"
- decision_pd_aw_wasteland_planet_desc: "Environmental concerns do nothing but hold us back. By ignoring the state of the planet's natural ecosystem, we will unlock the planet's true industrial potential."
- decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_aw_wasteland_planet$§! modifier added.\n\nIncreases §GIndustrial Output§! but reduces £mod_pop_environment_tolerance£ §RHabitability§!."
- decision_pd_aw_wasteland_planet_cleanup: "Environmental Clean Up"
- decision_pd_aw_wasteland_planet_cleanup_desc: "The severe environmental degradation on this planet has left its ecosystem in a precarious state. We will rectify the damage inflicted upon this world."
- decision_pd_aw_wasteland_planet_cleanup_tooltip: "We will restore this planet's original ecosystem."
+ decision_pd_aw_wasteland_planet: "규제되지 않는 산업 표준"
+ decision_pd_aw_wasteland_planet_desc: "환경 문제는 우리의 발목을 잡을 뿐입니다. 행성의 자연 생태계 상태를 무시한다면 행성의 진정한 산업적 잠재력을 발휘할 수 있습니다."
+ decision_pd_aw_wasteland_planet_effects_short: "§Y$pd_wasteland_planet$§! 모디파이어 추가.\n\n§GIndustrial Output§!을 증가시키지만 £mod_pop_environment_tolerance£ §RHabitability§!를 감소시킵니다."
+ decision_pd_aw_wasteland_planet_cleanup: "환경 정화"
+ decision_pd_aw_wasteland_planet_cleanup_desc: "이 행성의 심각한 환경 파괴로 인해 생태계가 불안정한 상태에 놓여 있습니다. 우리는 이 행성에 가해진 피해를 바로잡을 것입니다."
+ decision_pd_aw_wasteland_planet_cleanup_tooltip: "우리는 행성의 원래 생태계를 복원할 것입니다."
 
 #Modifiers
- pd_aw_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet: "산업 황무지"
  pd_aw_wasteland_planet_desc: "$decision_pd_aw_wasteland_planet_desc$"
- pd_aw_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
- pd_wasteland_planet: "Industrial Wasteland"
+ pd_aw_wasteland_planet_tooltip: "§YGenerator Districts§!와 §YMining District§!의 최대 제한을 해제\n§YAgriculture  Districts§! 건설 불가"
+ pd_wasteland_planet: "산업 황무지"
  pd_wasteland_planet_desc: "$pd_aw_wasteland_planet_desc$"
- pd_wasteland_planet_tooltip: "Unlocks £district£ §YGenerator Districts§! and §YMining District§!\nBlocks all §YAgriculture Districts§!"
+ pd_wasteland_planet_tooltip: "§YGenerator Districts§!와 §YMining District§!의 최대 제한을 해제\n§YAgriculture  Districts§! 건설 불가"
 
 #Notification Message
- MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$ now has §Y$decision_pd_aw_wasteland_planet$§!"
- MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "Environmental Regulations Abolished"
- MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "The ecosystem on $PLANET|Y$ has been repaired."
- MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "Environmental Regulations Returned"
+ MESSAGE_PD_AW_WASTELAND_DESC:1 "$PLANET|Y$은 이제 §Y$decision_pd_wasteland_planet$§!입니다."
+ MESSAGE_PD_AW_WASTELAND_MESSAGE_TYPE_TITLE: "환경 규제 폐지"
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_DESC:1 "$PLANET|Y$의 생태계가 복원되었습니다."
+ MESSAGE_PD_AW_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "환경 규제 재제정"
